--- a/config/fluentd.conf
+++ b/config/fluentd.conf
@@ -1,52 +1,43 @@
-# [SERVICE]
-# 	Flush     5
-# 	Daemon    Off
-# 	Log_Level Debug
-
-# [Input]
-# 	Name   forward
-# 	Listen 127.0.0.1
-# 	PORT   24224
-
-# [Output]
-# 	Name  es
-# 	Match *
-# 	Host  elasticsearch
-# 	PORT  9200
-# 	Index fluentbit
-# 	Type  docker
-
 <source>
   @type forward
   port  24224
-	bind 127.0.0.1
+	bind 0.0.0.0
 </source>
 
-<filter **>
-  @type stdout
+<filter docker.**>
+  @type parser
+  format json # apache2, nginx, etc...
+  key_name log
+  reserve_data true
 </filter>
 
-# <match docker.**>
-#   @type elasticsearch
-#   logstash_format true
-#   host 127.0.0.1
-#   port 9200
-#   flush_interval 5s
-# </match>
+# <filter docker.**>
+#   @type concat
+#   key log
+#   stream_identity_key container_id
+#   multiline_start_regexp /^-e:2:in `\/'/
+#   multiline_end_regexp /^-e:4:in/
+# </filter>
 
 # Store data in Elasticsearch and S3
 <match *.**>
-  type copy
+  @type copy
   <store>
-    type elasticsearch
-    host elasticsearch
+    @type elasticsearch
+    host docker.for.mac.localhost
     port 9200
-    include_tag_key true
-    tag_key @log_name
+		index_name fluentd
+  	type_name fluentd
     logstash_format true
-    flush_interval 10s
-    index_name fluentd
-    type_name fluentd
+    logstash_prefix fluentd
+    # logstash_dateformat %Y%m%d
+    # include_tag_key true
+    # type_name access_log
+    # tag_key @log_name
+    # flush_interval 1s
+  </store>
+  <store>
+    @type stdout
   </store>
   # <store>
   #   type s3
@@ -60,29 +51,3 @@
   #   time_slice_wait 10m
   # </store>
 </match>
-
-# <label @mainstream>
-#   <match **>
-#     @type copy
-#     <store>
-#       @type file
-#       @id output_docker1
-#       path /fluentd/log/docker.*.log
-#       symlink_path /fluentd/log/docker.log
-#       append true
-#       time_slice_format %Y%m%d
-#       time_slice_wait 1m
-#       time_format %Y%m%dT%H%M%S%z
-#       buffer_path /fluentd/log/docker.*.log
-#     </store>
-#     <store>
-#       @type elasticsearch
-#       logstash_format true
-#       flush_interval 5s
-#       host elasticsearch
-#       port 9200
-#       index_name fluentd
-#       type_name fluentd
-#     </store>
-#   </match>
-# </label>
