chore: cleanup code

--- a/config/fluentd.conf
+++ b/config/fluentd.conf
@@ -4,19 +4,11 @@
 	bind 0.0.0.0
 </source>
 
-<filter docker.**>
-  @type parser
-  format json # apache2, nginx, etc...
-  key_name log
-  reserve_data true
-</filter>
-
 # <filter docker.**>
-#   @type concat
-#   key log
-#   stream_identity_key container_id
-#   multiline_start_regexp /^-e:2:in `\/'/
-#   multiline_end_regexp /^-e:4:in/
+#   @type parser
+#   format json # apache2, nginx, etc...
+#   key_name log
+#   reserve_data true
 # </filter>
 
 # Store data in Elasticsearch and S3
@@ -30,11 +22,9 @@
   	type_name fluentd
     logstash_format true
     logstash_prefix fluentd
-    # logstash_dateformat %Y%m%d
-    # include_tag_key true
-    # type_name access_log
-    # tag_key @log_name
-    # flush_interval 1s
+    include_tag_key true
+    type_name access_log
+    tag_key @log_name
   </store>
   <store>
     @type stdout
