add http://localhost:1358 to cors allow-origin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - discovery.type=single-node
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "http.port=9200"
-      - "http.cors.allow-origin=http://127.0.0.1:1358"
+      - "http.cors.allow-origin=http://localhost:1358,http://127.0.0.1:1358"
       - "http.cors.enabled=true"
       - "http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization"
       - "http.cors.allow-credentials=true"
